1999-07-23  Roland McGrath  <roland@baalperazim.frob.com>

	* term.h (ILCASE, OLCASE): Use IUCLC, OLCUC if defined.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* term.h: Add #include <sys/mman.h>.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* ptyio.c (pty_io_read): Use mmap instead of vm_allocate.
	* users.c (trivfs_S_io_read): Likewise.

1999-05-24  Mark Kettenis  <kettenis@gnu.org>

	* devio.c: Include <assert.h>, <errno.h> and <error.h>.  Do
	not include <stdio.h> and <sys/types.h>.
	Reorganize the order of inclusion of the header files a bit and
	document the baud-rate hackery.  Include <termios.h> explicitely.
	(init_devio): Use new local variable ERR instead of ERRNO.  Use
	error instead of perror and exit to report failure.
	(devio_desert_dtr): Declare BITS as `int' instead of
	`dev_status_t'.

1999-05-13  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c (trivfs_S_file_chown): Either arg being -1 means don't
	change that id.

1999-03-22  Roland McGrath  <roland@baalperazim.frob.com>

	* devio.c (initial_open): Fix typos.

Wed Mar 17 16:32:05 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* users.c (S_term_get_peername): Compare BOTTOM against the
 	correct value, and call ports_port_deref with the proper name.
  	Reported by Yamashita TAKAO (az207@epa.go.jp).

	* devio.c (devio_desert_dtr): Cast &BITS correctly in call to
	device_set_status.
	(device_open_reply): Alwas clean open_pending no matter what.  Use
	ERR instead of ERRNO.  On fake opens, close the device before
	deallocating the port.
	Reported by Mark Kettenis (kettenis@gnu.org).

Tue Mar 16 01:04:06 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* devio.c (open_pending): Make an enum.
	(devio_desert_dtr): Don't close the device, just set the TM_HUP
 	modem bit, which should cause a hangup to occur.
	(devio_assert_dtr): Don't always open the device, instead use
 	initial_open the first time, and schedule a fake open the other
 	times.