@@ -1,3 +1,8 @@
+1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* users.c (trivfs_S_io_map): Renamed to ...
+	(trivfs_S_io_map_segment): ... here.
+
 1999-07-23  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* term.h (ILCASE, OLCASE): Use IUCLC, OLCUC if defined.
